--- a/.github/workflows/update-portfolio.yml
+++ b/.github/workflows/update-portfolio.yml
@@ -21,5 +21,5 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add portfolio.json
-          git diff --staged --quiet || git commit -m "Update portfolio data - $(date +'%Y-%m-%d %H:%M:%S')"
+          git diff --staged --quiet || git commit -m "Update portfolio data - $(TZ=Asia/Seoul date +'%Y-%m-%d %H:%M:%S')"
           git push
